--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
     - name: Build
       run: |
         npm install
+        npm run test
         npm run build
     - name: Firebase Deploy
       run: |
